--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -26,7 +26,11 @@
                         <td th:text="${item.key}"></td>
                         <td th:text="${item.value}"></td>
                     </tr>
-                    <tr th:each="item:${bazi}">
+                    <tr th:each="item:${mingju}">
+                        <td th:text="${item.key}"></td>
+                        <td th:text="${item.value}"></td>
+                    </tr>
+                    <tr th:each="item:${mingpan}">
                         <td th:text="${item.key}"></td>
                         <td th:text="${item.value}"></td>
                     </tr>
