--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>[[${title}]]</title>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"  media="screen"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@3.x/css/materialdesignicons.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
@@ -63,7 +64,7 @@
                                 </thead>
                                 <tbody>
                                 <tr th:each="item:${mingpen}">
-                                    <td th:text="${item.key}"></td>
+                                    <td th:text="${pinyinMap[item.key]}"></td>
                                     <td th:text="${item.value}"></td>
                                 </tr>
                                 </tbody>
@@ -90,7 +91,7 @@
                                 </thead>
                                 <tbody>
                                 <tr th:each="item:${mingju}">
-                                    <td th:text="${item.key}"></td>
+                                    <td th:text="${pinyinMap[item.key]}"></td>
                                     <td th:text="${item.value}"></td>
                                 </tr>
                                 </tbody>
